# WorkflowAutoS

./: .gitignore  Cargo.toml  struktur.txt
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  result.rs  task.rs
crates/executor/: Cargo.toml  file_executor_test.rs
crates/executor/src/: file.rs  lib.rs  traits.rs
crates/executor/tests/: basic.rs
crates/orchestrator/: Cargo.toml
tauri-app/: pnpm-lock.yaml
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
