[package]
name = "local-automation-executor"
version.workspace = true
edition.workspace = true

[dependencies]
local-automation-common = { path = "../common" }  
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Executor-specific
walkdir = "2.4"
notify = "6.1"
csv = "1.3"
async-trait = "0.1"