[package]
name = "local-automation-executor"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-automation-common = { path = "../common" }
async-trait = "0.1"
walkdir = "2.4"
notify = "6.1"
csv = "1.3"

[dev-dependencies]
tempfile = "3"
