[package]
name = "local-automation-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-automation-common = { path = "../common" }
local-automation-executor = { path = "../executor" }
